===========================================
 Release notes for PyTables Pro 2.0 series
===========================================

:Author: Francesc Altet i Abad
:Contact: faltet@carabos.com
:Author: Ivan Vilata i Balaguer
:Contact: ivilata@carabos.com

Changes from 2.0.2.1 to 2.0.3
=============================

- Replaced the algorithm for computing chunksizes by another that is
  more general and useful for a larger range of expected dataset
  sizes. The outcome of the new calculation is the same than before
  for dataset sizes <= 100 GB. For datasets between 100 GB <= size <
  10 TB, larger values are returned. For sizes >= 10 TB a maximum
  value of 1 MB is always returned.

- Fixed a problem when using 64-bit indexes in 32-bit platforms.
  Solves ticket #148.

- Added support for the latest 1.8.0 version of the HDF5 library.
  Fixes ticket #127.

Changes from 2.0.2 to 2.0.2.1
=============================

- Optimization added for avoid to unnecessarily update index columns
  that have not been modified in table update operations.  Fixes #139.


Changes from 2.0.1 to 2.0.2
===========================

- Fixed a critical bug that returned wrong results when doing repetitive
  queries affecting the last row part of indices.  Fixes #60 of the private
  Trac of Carabos.

- Added ``__enter__()`` and ``__exit__()`` methods to ``File``; fixes #113.
  With this, and if using Python 2.5 you can do things like:

    with tables.openFile("test.h5") as h5file:
        ...

- Carefully preserve type when converting NumPy scalar to numarray; fixes
  #125.

- Fixed a nasty bug that appeared when moving or renaming groups due to a bad
  interaction between ``Group._g_updateChildrenLocation()`` and the LRU cache.
  Solves #126.

- Return 0 when no rows are given to ``Table.modifyRows()``; fixes #128.

- Added an informative message when the ``nctoh5`` utility is run without the
  NetCDF interface of ScientificPython bening installed.
