@@ -7226,15 +7226,15 @@ table.modifyRows(start=1, stop=3, step=2, rows=rows)</screen>
             <literal>Table</literal> objects offer. See the file
             <literal>examples/nested-iter.py</literal> for the full
             code.</para>
-          </section>
 
-          <warning>
-            <para>When in the middle of a table row iterator, you should not
-            use methods that can change the number of rows in the table
-            (like <literal>Table.append()</literal> or
-            <literal>Table.removeRows()</literal>) or unexpected errors will
-            happen.</para>
-          </warning>
+            <warning>
+              <para>When in the middle of a table row iterator, you should not
+              use methods that can change the number of rows in the table
+              (like <literal>Table.append()</literal> or
+              <literal>Table.removeRows()</literal>) or unexpected errors will
+              happen.</para>
+            </warning>
+          </section>
 
           <section id="Table.whereAppend">
             <title>whereAppend(dstTable, condition, condvars=None, start=None,
