@@ -7,6 +7,7 @@
 :Author: Ivan Vilata i Balaguer
 :Contact: ivilata@carabos.com
 
+
 Changes from 2.0.2.1 to 2.0.3
 =============================
 
@@ -17,11 +18,17 @@ Changes from 2.0.2.1 to 2.0.3
   10 TB, larger values are returned. For sizes >= 10 TB a maximum
   value of 1 MB is always returned.
 
+- Fixed a problem when updating multidimensional cells using the
+  Row.update() method in the middle of table iterators .  Fixes #149.
+
 - Fixed a problem when using 64-bit indexes in 32-bit platforms.
   Solves ticket #148.
 
 - Added support for the latest 1.8.0 version of the HDF5 library.
   Fixes ticket #127.
+
+- PyTables compiles now against latest versions of Pyrex (0.9.6.4).
+
 
 Changes from 2.0.2 to 2.0.2.1
 =============================
